bookface_light_userstyles.css
/*
	Name	   : Bookface Light User Styles
	Version    : 1.8.1
    Licence    : AGPL
    Created on : 12 JULY 2025
    Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
    
	This "user styles" stylesheet will override Friendica and style it more like Facebook.
     
	Go to Settings - Display - Theme and select "Frio"
	Under "Theme Customization" select default "Lite" scheme, blue variant
	-or-
	Edit the --link-color: value in :root section below to match your Accent Color choice:
   	Blue:	#0066FF;
   	Red:	#b50404;
   	Purple:	#94439b;
   	Green:	#218f39;
   	Pink:	#d900a9;
	-or -
	Choose "Custom" and paste this schemestring:

	{"nav_bg":"#ffffff","nav_icon_color":"#65686c","link_color":"#0066ff","background_color":"#f2f4f7","background_image":"","contentbg_transp":"100"}
   				change Accent Color to your choice here -----------^
   				then match it in --link-color: in :root section		
   									
   Paste the css code below into Stylus add-on for Firefox, Stylus Extension for Chrome, or Usercripts extension for Safari.
   You can also pasted it into a userContent.css file for Firefox, but wrap it in "@-moz-document domain(friendica.instance){...}" (replace with your server)

*/

:root {
	/* Fonts and Colors */
    --global-font-family: "Open Sans", Arial, sans-serif, Noto Color Emoji;
    --nav-bg: $nav_bg;
    --link-color: $link_color;
    --nav-icon-color: $nav_icon_color;
    --background-color: $background_color;
    --content-bg: var(--nav-bg);
    --comment-bg: var(--background-color);
    --font-color: $font_color;
    --font-color-lighter: $font_color_lighter; 
    --font-color-darker: $font_color_darker;
    --menu-background-hover-color: $menu_background_hover_color;
    --border-color: #eeeeee;
    --count-color:  #ffffff;
    --count-bg: var(--link-color);
    --shadowglow: rgba(0,0,0,.3);	
    --dimbright:  rgba(0,0,0,.1);	
    
    /* Theme Features */
	--attach-file-button: none; /* none or block */
	--show-tooltips: block; /* none or block */ 
	--show-navbar-labels: none; /*none or block */ 
    
    /* LOCALIZE pseudo-element text below */
    --navbar-network-text: 'Network';
    --navbar-profile-text: 'Home';
    --navbar-community-text: 'News Feed';
    --navbar-messages-text: 'Messages';
    --navbar-calendar-text: 'Calendar';
    --navbar-contact-text: 'Friends';
    --navbar-notices-text: 'Notices';
    --sign-in-text: 'Sign-In';
    --compose-text: 'Compose';
    --new-note-text: 'New Note';
    --save-search-text: 'Save Search';
    --follow-tag-text: 'Follow Tag';
    --comment-button-text: 'Comment';
    --share-button-text: 'Share';
    --quote-button-text: 'Quote';
    --like-button-text: 'Like';
    --dislike-button-text: 'Dislike';
    --more-button-text: 'More';
    --attendyes-button-text: 'Going';
    --attendno-button-text: 'Can\'t Go';
    --attendmaybe-button-text: 'Maybe';
    --add-photo-button-text: 'Add Photos';
    --follow-button-text: 'Follow';
    --save-button-text: 'Save';  
	--new-message-text: 'New Message';
	--calendar-today-text: 'Today';  
}

	body {
		background-color: var(--background-color)  !important;
		font-size: 15px  !important;
		padding-top: 130px  !important;
		font-family: var(--global-font-family) !important;
	}
	.btn-link, a.btn {
		color: var(--link-color) !important; 
	}
	body a:hover,
  .btn:hover,
	.btn-link:hover, 
	body a:focus, 
  .btn:focus,
	.btn-link:focus, 
	body a:active, 
  .btn:active,
	.btn-link:active, 
	body a.active, 
	.btn-link.active {
		color: var(--link-color) !important;
	} 
	.text-muted {
		color: var(--font-color-lighter) !important;
	} 
	.toplevel_item:hover .fakelink, 
	.wall-item-container:hover .fakelink, 
	.toplevel_item:hover .wall-item-container:hover .wall-item-responses a, 
	.toplevel_item:hover .wall-item-content a, 
	.toplevel_item:hover .wall-item-name, 
	.wall-item-container:hover .wall-item-content a, 
	.wall-item-container:hover .wall-item-name, 
	.wall-item-container:hover .wall-item-location a,
	.btn-link {
		color: var(--link-color) !important;
	}
    .topbar a:hover,
    .topbar a:focus,
    .topbar a:active,
	main a:hover, 
	main a:focus, 
	main a:active {
		color: var(--link-color) !important;
	}
	#topbar-first .nav > li > a, 
	#topbar-first .nav > li > button, 
	nav.navbar .nav > li > a, 
	nav.navbar .nav > li > button{
		color: var(--nav-icon-color)  !important;
		background-color: transparent !important; 
	}
	#topbar-first .nav > .open > a, 
	#topbar-first .nav > .open > button {
		background-color: transparent !important;
	}
	#topbar-first, nav.navbar {
		background-color: var(--nav-bg)  !important;
		color: var(--nav-icon-color)  !important;
		height: 55px !important;
	}
		#topbar-first .topbar-nav .nav-segment {
			margin-right: 10px !important;
		}
		#topbar-first .nav > li > a:hover:not(.selected) {
			background-color: rgba(128,128,128,.1)  !important;
			border-radius: 8px  !important;
		}
		.fa-lg {
			font-size: 24px  !important;
		}
		/* Navbar Labels */ 
		#topbar-first .nav > li > a {
			text-align: center !important;
		}
		#topbar-first .nav > li > a::after {
			font-size: 12px;
			display: var(--show-navbar-labels);
			margin-bottom: -15px;
		}
			#topbar-first a[href="network"]::after {
				content: var(--navbar-network-text);
			}
			#topbar-first a[href^="profile"]::after {
				content: var(--navbar-profile-text);
			}
			#topbar-first a[href="community"]::after{
				content: var(--navbar-community-text);
			}
			#topbar-first a[href="message"]::after{
				content: var(--navbar-messages-text);
			}
			#topbar-first a[href="calendar"]::after{
				content: var(--navbar-calendar-text);
			}
			#topbar-first a[href="contact"]::after{
				content: var(--navbar-contact-text);
			}
/* ... */

